# swagger.json
@@ -170,6 +170,270 @@
         }
       }
     },
+    "/news/getMostViewed": {
+      "get": {
+        "summary": "Get most viewed news items",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "schema": { "type": "array", "items": { "$ref": "#/definitions/News" } }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": { "$ref": "#/definitions/Error" }
+          }
+        }
+      }
+    },
+     "/news/search": {
+      "get": {
+        "summary": "Search for news items",
+        "parameters": [
+          {
+            "name": "search",
+            "in": "query",
+            "description": "Search query",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "schema": { "type": "array", "items": { "$ref": "#/definitions/News" } }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": { "$ref": "#/definitions/Error" }
+          }
+        }
+      }
+    },
+    "/news/filter": {
+      "get": {
+        "summary": "Filter news items",
+        "parameters": [
+          {
+            "name": "countryId",
+            "in": "query",
+            "description": "ID of the country",
+            "type": "integer"
+          },
+          {
+            "name": "categoryId",
+            "in": "query",
+            "description": "ID of the category",
+            "type": "integer"
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "schema": { "type": "array", "items": { "$ref": "#/definitions/News" } }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": { "$ref": "#/definitions/Error" }
+          }
+        }
+      }
+    },
+    "/news/relatesNews": {
+      "get": {
+        "summary": "Get related news items",
+        "parameters": [
+          {
+            "name": "categoryId",
+            "in": "query",
+            "description": "ID of the category",
+            "type": "integer",
+            "required": true
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "schema": { "type": "array", "items": { "$ref": "#/definitions/News" } }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": { "$ref": "#/definitions/Error" }
+          }
+        }
+      }
+    },
+    "/news/getMostViewedByCountryId/{id}": {
+      "get": {
+        "summary": "Get most viewed news by country ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of the country",
+            "type": "integer",
+            "required": true
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "schema": { "type": "array", "items": { "$ref": "#/definitions/News" } }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": { "$ref": "#/definitions/Error" }
+          }
+        }
+      }
+    },
+    "/news/getMostViewedAndRelates/{id}": {
+      "get": {
+        "summary": "Get most viewed news and related news by category ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of the category",
+            "type": "integer",
+            "required": true
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "relatesNews": { "type": "array", "items": { "$ref": "#/definitions/News" } },
+                "mostViewedNews": { "type": "array", "items": { "$ref": "#/definitions/News" } }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": { "$ref": "#/definitions/Error" }
+          }
+        }
+      }
+    },
+ "/news/editNews/{id}": {
+      "put": {
+        "summary": "Update a News by Id",
+        "consumes": ["multipart/form-data"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "Authorization token",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer"
+          },
+          {
+            "name": "title",
+            "in": "formData",
+            "description": "Title of the news",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "description",
+            "in": "formData",
+            "description": "Description of the news",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "contentTitle",
+            "in": "formData",
+            "description": "Title of the news content",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "contentDescription",
+            "in": "formData",
+            "description": "Description of the news content",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "countryId",
+            "in": "formData",
+            "description": "ID of the country",
+            "type": "integer",
+            "required": true
+          },
+          {
+            "name": "categoryId",
+            "in": "formData",
+            "description": "ID of the category",
+            "type": "integer",
+            "required": true
+          },
+          {
+            "name": "author",
+            "in": "formData",
+            "description": "Author of the news",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "imageTitle",
+            "in": "formData",
+            "description": "Title of the image",
+            "type": "string"
+          },
+          {
+            "name": "imageAuthor",
+            "in": "formData",
+            "description": "Author of the image",
+            "type": "string"
+          },
+          {
+            "name": "img",
+            "in": "formData",
+            "description": "Small image file for the news",
+            "type": "file",
+            "required": true
+          },
+          {
+            "name": "bigImage",
+            "in": "formData",
+            "description": "Big image file for the news (optional)",
+            "type": "file"
+          },
+          {
+            "name": "videoFile",
+            "in": "formData",
+            "description": "Video file for the news (optional)",
+            "type": "file"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully Upadated",
+            "schema": { "$ref": "#/definitions/News" }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": { "$ref": "#/definitions/Error" }
+          }
+        }
+      }
+    },
 "/news/delete/{id}": {
   "delete": {
     "summary": "Delete a news item by ID",
